@@ -10,24 +10,27 @@ $access{'ro'} && &error($text{'master_ero'});
 
 # Validate inputs
 &allowed_zone_file(\%access, $in{'file'}) || &error($text{'hcreate_efile'});
+&lock_file(&make_chroot($in{'file'}));
 open(FILE, ">>".&make_chroot($in{'file'})) || &error($text{'hcreate_efile2'});
 close(FILE);
 
 # Get the root server information
 if ($in{'real'} == 1) {
 	# Download from internic
-	&ftp_download("rs.internic.net", "/domain/named.root", 
-		      &make_chroot($in{'file'}));
+	$err = &download_root_zone($in{'file'});
+	&error($err) if ($err);
 	}
 elsif ($in{'real'} == 2) {
 	# Use webmin's copy
-	system("cp ./db.cache ".&make_chroot($in{'file'})." 2>/dev/null");
+	&copy_source_dest("$module_root_directory/db.cache",
+		          &make_chroot($in{'file'}));
 	}
 else {
 	# Just check the existing file
 	@recs = &read_zone_file(&make_chroot($in{'file'}), ".");
 	&error($text{'mcreate_erecs'}) if (@recs < 2);
 	}
+&unlock_file(&make_chroot($in{'file'}));
 
 # Create zone structure
 $dir = { 'name' => 'zone',
