@@ -44,9 +44,9 @@ index_view=(In view $1)
 index_inview=In View $1
 index_views=Existing Client Views
 index_vnone=There are no client views defined on this server.
-index_addview=Create a new view.
+index_addview=Create client view.
 index_root=Root zone
-index_addhint=Create a new root zone.
+index_addhint=Create root zone.
 index_version=BIND version $1
 index_chroot=BIND version $1, under chroot $2
 index_sapply=Apply Changes On:
@@ -338,6 +338,8 @@ create_emaster='$1' is not a valid master server address
 create_enone=You must enter at least one master server
 
 boot_err=Download failed
+boot_egzip=The root zone file is compressed, but the <tt>gzip</tt> command is not installed on your system!
+boot_egzip2=Uncompression of root zone file failed : $1
 
 type_A=Address
 type_AAAA=IPv6 Address
@@ -683,6 +685,7 @@ findfree_cf=Consider <em>`freeXXX'</em> hostnames as free IP's?
 findfree_search=Search
 
 free_title=Free IP Addresses
+free_ip=IP Address
 
 log_servers=Changed other DNS servers
 log_logging=Changed logging and errors
@@ -771,6 +774,7 @@ hint_deletedesc=Click this button to remove this root zone. Without it, your nam
 
 hcreate_title=Create Root Zone
 hcreate_desc=The root zone is used by your DNS server to contact the root servers on the internet, so that it can resolve names in domains not handled by your DNS server, like <tt>.com</tt> or <tt>.net.au</tt>. If you are using multiple views, you may need to have a separate root zone in each view so that all clients can resolve internet domains properly.
+hcreate_header=Root zone details
 hcreate_file=Store root servers in file
 hcreate_real=Get root servers from
 hcreate_keep=Existing root servers in file
