@@ -10,17 +10,14 @@ $zone = &get_zone_name($in{'index'}, $in{'view'});
 &can_edit_zone($zone, $view) ||
 	&error($text{'hint_ecannot'});
 $file = $zone->{'file'};
-$file = &make_chroot(&absolute_path($file));
+$rootfile = &make_chroot(&absolute_path($file));
 
 # Try to download the root servers file from
 # ftp://rs.internic.net/domain/named.root
-&lock_file($file);
-&ftp_download($internic_ftp_host, $internic_ftp_file, $file, \$ftperr);
-if ($ftperr) {
-	# Try IP address directly
-	&ftp_download($internic_ftp_ip, $internic_ftp_file, $file);
-	}
-&unlock_file($file);
+&lock_file($rootfile);
+$err = &download_root_zone(&absolute_path($file));
+&error($err) if ($err);
+&unlock_file($rootfile);
 
 &webmin_log("refetch");
 &redirect("");
